--- a/src/app.html
+++ b/src/app.html
@@ -4,40 +4,31 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="Description"
-	  content="Coolify: An open-source, hassle-free, self-hostable Heroku & Netlify alternative." />
+	  content="Fonts: Privacy-focused Google Fonts CDN alternative" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@andrasbacsai" />
-	<meta name="twitter:title" content="Coolify" />
-	<meta name="twitter:description" content="An open-source, hassle-free, self-hostable Heroku & Netlify alternative." />
-	<meta name="twitter:image" content="https://cdn.coollabs.io/assets/coolify/og-image.png" />
+	<meta name="twitter:title" content="Fonts" />
+	<meta name="twitter:description" content="Privacy-focused Google Fonts CDN alternative" />
+	<meta name="twitter:image" content="https://cdn.coollabs.io/assets/fonts/og-image.png" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://coolify.io" />
-	<meta property="og:title" content="Coolify" />
-	<meta property="og:description" content="An open-source, hassle-free, self-hostable Heroku & Netlify alternative." />
-	<meta property="og:site_name" content="Coolify" />
-	<meta property="og:image" content="https://cdn.coollabs.io/assets/coolify/og-image.png" />
-	<title>Coolify</title>
+	<meta property="og:url" content="https://fonts.coollabs.io" />
+	<meta property="og:title" content="Fonts" />
+	<meta property="og:description" content="Privacy-focused Google Fonts CDN alternative" />
+	<meta property="og:site_name" content="Fonts" />
+	<meta property="og:image" content="https://cdn.coollabs.io/assets/fonts/og-image.png" />
+	<title>Fonts</title>
 	<link rel="icon" href="favicon.png" />
 	<link rel="dns-prefetch" href="https://cdn.coollabs.io/" />
 	<link rel="preconnect" href="https://cdn.coollabs.io/" crossorigin="" />
 	<link rel="stylesheet" href="https://cdn.coollabs.io/css/tailwind-2.0.3.min.css" />
 	<link rel="stylesheet" href="https://cdn.coollabs.io/fonts/montserrat/montserrat.css" />
-	<script src="https://cdn.coollabs.io/js/typed.js-2.0.11.js"></script>
 	%svelte.head%
 </head>
 
 <body>
 	<main id="svelte">%svelte.body%</main>
-	<script async defer data-domain="coolify.io" src="https://analytics.coollabs.io/js/plausible.js"></script>
-	<script lang="javascript">
-		new Typed('#typed', {
-			typeSpeed: 25,
-			showCursor: false,
-			loop: true,
-			strings: ['indiehackers^1500', 'developers^1500', 'hobbyists^1500']
-		});
-	</script>
+	<script async defer data-domain="fonts.coollabs.io" src="https://analytics.coollabs.io/js/plausible.js"></script>
 </body>
 
 </html>
