Change metatags and headline

--- a/src/app.html
+++ b/src/app.html
@@ -4,20 +4,20 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="Description"
-	  content="Fonts: Privacy-focused Google Fonts CDN alternative" />
+	  content="coolLabs Fonts: A privacy-friendly drop-in replacement for Google Fonts" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@andrasbacsai" />
-	<meta name="twitter:title" content="Fonts" />
-	<meta name="twitter:description" content="Privacy-focused Google Fonts CDN alternative" />
+	<meta name="twitter:title" content="coolLabs Fonts" />
+	<meta name="twitter:description" content="A privacy-friendly drop-in replacement for Google Fonts" />
 	<meta name="twitter:image" content="https://cdn.coollabs.io/assets/fonts/og-image.png" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://fonts.coollabs.io" />
-	<meta property="og:title" content="Fonts" />
-	<meta property="og:description" content="Privacy-focused Google Fonts CDN alternative" />
-	<meta property="og:site_name" content="Fonts" />
+	<meta property="og:title" content="coolLabs Fonts" />
+	<meta property="og:description" content="A privacy-friendly drop-in replacement for Google Fonts" />
+	<meta property="og:site_name" content="coolLabs Fonts" />
 	<meta property="og:image" content="https://cdn.coollabs.io/assets/fonts/og-image.png" />
-	<title>Fonts</title>
+	<title>coolLabs Fonts</title>
 	<link rel="icon" href="favicon.png" />
 	<link rel="dns-prefetch" href="https://cdn.coollabs.io/" />
 	<link rel="preconnect" href="https://cdn.coollabs.io/" crossorigin="" />
